--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="keywords" content="网页关键字">
     <meta name="description" content="网页描述文字">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
