--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <% for(var js of htmlWebpackPlugin.options.cdn.js) { %>
+      <link href="<%=js%>" rel="preload" as="script">
+      <script src="<%=js%>"></script>
+    <% } %>
   </head>
   <body>
     <noscript>
